# kb-mcp

./: .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.en.md  README.ja.md  README.md  TODO.md  claude-progress.txt  dist-workspace.toml  features.json  kb-mcp-schema.toml.example  kb-mcp.toml.example
.claude/commands/: feature-flow.md  full-audit.md
.githooks/: pre-push
.github/workflows/: ci.yml  nightly.yml
benches/: mmr_perf.rs  search_latency.rs  string_ops.rs
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  citations.ja.md  citations.md  design.md  eval.ja.md  eval.md  feature-ideas.md  filters.ja.md  filters.md  plan.md  retrieval-pipeline.ja.md  retrieval-pipeline.md
docs/plans/: feature-12-live-sync.md  feature-17-frontmatter-schema.md  feature-18-http-transport.md  feature-20-non-markdown.md
examples/deployments/: README.ja.md  README.md
examples/deployments/intranet-http/: .mcp.json  README.ja.md  README.md  kb-mcp.toml
examples/deployments/nas-shared/: .mcp.json  README.ja.md  README.md
examples/deployments/personal/: .mcp.json  README.ja.md  README.md
examples/deployments/personal-http/: .mcp.json  README.ja.md  README.md  com.kb-mcp.plist  kb-mcp-task.xml  kb-mcp.toml  kb-mcp.user.service
examples/hooks/: README.en.md  README.ja.md  README.md  settings.json
src/: config.rs  db.rs  embedder.rs  eval.rs  graph.rs  indexer.rs  lib.rs  main.rs  markdown.rs  mmr.rs  parent.rs  quality.rs  schema.rs  server.rs  watcher.rs
src/parser/: markdown.rs  mod.rs  registry.rs  txt.rs
src/transport/: http.rs  mod.rs  stdio.rs
tests/: config_discovery.rs  http_transport.rs  search_cli.rs  search_mmr_integration.rs  search_parent_integration.rs  validate_cli.rs
tests/common/: mod.rs
