[package]
name = "kb-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
fastembed = "5"
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
dirs = "6"
# [feature 17] frontmatter スキーマ検証の pattern フィールド用
regex = "1"
# [feature 12] file watcher + debouncer。rename を from/to ペアとして拾える
# notify-debouncer-full を採用。notify 本体は transitive で取り込まれる。
notify = "8"
notify-debouncer-full = "0.6"
