[package]
name = "kb-mcp"
version = "0.4.2"
edition = "2024"
description = "MCP server providing semantic hybrid search (sqlite-vec + FTS5 with optional cross-encoder reranking) over a Markdown / plain-text knowledge base."
authors = ["koshian"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alphabet-h/kb-mcp"
homepage = "https://github.com/alphabet-h/kb-mcp"
readme = "README.md"
keywords = ["mcp", "rag", "search", "embedding", "sqlite-vec"]
categories = ["command-line-utilities", "database", "text-processing"]

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
fastembed = "5"
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
dirs = "6"
# [feature 17] frontmatter スキーマ検証の pattern フィールド用
regex = "1"
# [feature 12] file watcher + debouncer。rename を from/to ペアとして拾える
# notify-debouncer-full を採用。notify 本体は transitive で取り込まれる。
notify = "8"
notify-debouncer-full = "0.6"
# [feature 26] path_globs filter 用
globset = "0.4"
# [feature 27] config discovery: cross-platform `~` 展開
shellexpand = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
